tests/errors/sem_aug_sub_str.kt
fun main() {
var str: String = "Hello"
str -= "o"
}
